[package]
name = "comediget"
version = "0.1.0"
authors = ["Szymon Mikulicz <szymon.mikulicz@posteo.net>"]
edition = "2018"

[workspace]
members = [
    "comedilib",
    "comedilib/comedilib-sys",
]

[dependencies]
comedilib = { path = "comedilib" }
hdf5 = "0"
log = "0"
env_logger = "0"
ndarray = "0"
